--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/eventosapp
 spring.datasource.username=postgres
-spring.datasource.password=p3dr01v0
+spring.datasource.password=r0m3uv0
 spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto = update
